package com.diezam04.expresso.core;

public class Transpiler {

    public static String run(String expressoFile) {
        try {
            return expressoFile;
        } catch (Exception e) {
            return null;
        }
    }
}
